[package]
name = "heaven-sdk-rs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "heaven_exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
debug = []
devnet = []
localnet = []
default = ["pool-price-stats"]
pool-stats = []
user-pool-stats = []
user-global-stats = []
pool-price-stats = []
pool-24h-volume-stats = []

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = "=0.30.1"
uint = "0.9.5"
anyhow = "1.0.86"
