[package]
name = "v1"
version = "0.1.0"
edition = "2021"

[dependencies]
heaven-sdk-rs = { path = "../accounts" }
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
jupiter-amm-interface = "0.4.4"
anyhow = "1.0.86"
solana-client = "1.18.18"

[dev-dependencies]
num = "0.4.0"